--- a/notes/inputs/macros.sty
+++ b/notes/inputs/macros.sty
@@ -3,6 +3,8 @@
 \newcommand{\comm}[2]{\ensuremath{\mathrel{[#1, #2]}}}
 \newcommand{\comr}[1]{\ensuremath{\mathrel{\lb #1 \rb}}}
 \newcommand{\com}[1]{\ensuremath{\lb #1 \rb}}
+%% \newcommand{\commone}{\ensuremath{\com\Cg^{\bF}(x,y)}}
+\newcommand{\commone}{\ensuremath{[1_F, 1_F]}}
 \newcommand{\etaR}{\ensuremath{\tilde{\eta}}}
 \newcommand{\rhoR}{\ensuremath{\tilde{\rho}}}
 \newcommand{\hto}{\ensuremath{\rightharpoonup}}
