--- a/notes/prod-cong.tex
+++ b/notes/prod-cong.tex
@@ -436,20 +436,21 @@ One way to see this is to note that $\bF$ is a
 
 
 %% NEW STUFF
-% Before proving the next result, it will be helpful to review some standard
-% notation that is useful when dealing with products of quotients.  If $\alpha$
-% and $\beta$ are congruences of $\bA$ and 
-% $\bB$ (or, more generally, equivalence relations on $A$ and $B$), then
-% for all $a\in A$ and $b\in B$, we let
-% \[
-% (a,b)/\alpha \times \beta = \{(a', b') \in A\times B \mid a\mathrel{\alpha} a', \;
-% b\mathrel{\beta} b'\} = a/\alpha \times b/\beta.
-% \]
-% \[
-% (A\times B)/\alpha \times \beta = \{(a, b)/\alpha \times \beta \mid a\in A,\, b \in B\}
-%  = ...
-% \]
+Before proving the next result, it will be helpful to review some standard
+notation that is useful when dealing with products of quotients.  If $\alpha$
+and $\beta$ are congruences of $\bA$ and 
+$\bB$ (or, more generally, equivalence relations on $A$ and $B$), then
+for all $a\in A$ and $b\in B$, we let
+\[
+(a,b)/\alpha \times \beta = \{(a', b') \in A\times B \mid a\mathrel{\alpha} a', \;
+b\mathrel{\beta} b'\} = a/\alpha \times b/\beta.
+\]
+\[
+(A\times B)/\alpha \times \beta = \{(a, b)/\alpha \times \beta \mid a\in A,\, b \in B\}
+ = ...
+\]
 
+\newpage
 
 \begin{theorem}
 \label{thm:main-result}
