--- a/notes/inputs/macros.sty
+++ b/notes/inputs/macros.sty
@@ -1,8 +1,14 @@
 \newcommand{\CC}[3]{\ensuremath{\sansC(#1, #2; #3)}} % \CC{a}{b}{c}  for  C(a, b; c)
 \newcommand{\C}[2]{\ensuremath{\sansC(#1, #2)}}      % \C{a}{b}      for  C(a, b)
-\newcommand{\comm}[2]{\ensuremath{\mathrel{[#1, #2]}}}
-\newcommand{\comr}[1]{\ensuremath{\mathrel{\lb #1 \rb}}}
-\newcommand{\com}[1]{\ensuremath{\lb #1 \rb}}
+
+\newcommand{\commr}[2]{\ensuremath{\mathrel{[#1, #2]}}} % [r, s] (relation spacing)
+\newcommand{\comr}[1]{\ensuremath{\mathrel{[#1, #1]}}}  % [r, r] (relation spacing)
+\newcommand{\com}[1]{\ensuremath{[#1, #1]}}             % [r, r] (no extra space)
+
+\newcommand{\Comr}[1]{\ensuremath{\mathrel{\lb #1 \rb}}} % [[r]] (relation spacing)
+\newcommand{\Com}[1]{\ensuremath{\lb #1 \rb}}            % [[r]] (no extra space)
+
+
 %% \newcommand{\commone}{\ensuremath{\com\Cg^{\bF}(x,y)}}
 \newcommand{\commone}{\ensuremath{[1_F, 1_F]}}
 \newcommand{\etaR}{\ensuremath{\tilde{\eta}}}
@@ -81,6 +87,10 @@
 \newcommand{\bC}{\ensuremath{\mathbf{C}}}
 \newcommand{\bD}{\ensuremath{\mathbf{D}}}
 \newcommand{\bF}{\ensuremath{\mathbf{F}}}
+%% \newcommand{\Fone}{\ensuremath{F_1}}
+%% \newcommand{\bFone}{\ensuremath{\mathbf{F}_1}}
+\newcommand{\Fone}{\ensuremath{F}}
+\newcommand{\bFone}{\ensuremath{\mathbf{F}}}
 \newcommand{\bP}{\ensuremath{\mathbf{P}}}
 \newcommand{\bp}{\ensuremath{\mathbf{p}}}
 \newcommand{\br}{\ensuremath{\mathbf{r}}}
