--- a/notes/prod-cong.tex
+++ b/notes/prod-cong.tex
@@ -721,6 +721,8 @@ Observe that~(\ref{eq:3}) is still stronger than~(\ref{eq:5})
 because $\bF$ is a subalgebra of $\bA_0\times \bA_1 \times \bA_2$, so 
 $\com{1_F} \subseteq \com{1_{A_0\times A_1\times A_2}}$.
 
+\medskip
+
 \noindent {\bf Question.} How do the following congruence relations compare?
 \begin{enumerate}
 \item $\com{1_{A_0}} \times \com{1_{A_1\times A_2}}$
@@ -770,7 +772,8 @@ such that
 \bigl(\bF/\etaR_i\bigr)\bigl(\phi_i/\etaR_i\bigr)
 \cong \bA_i/\com{1_{A_i}}.
 \]
-\newpage
+
+\vfill
 
 \bibliographystyle{alphaurl}
 \bibliography{inputs/refs2.bib}
