initial commit of com-fix-poi

--- a/notes/inputs/macros.sty
+++ b/notes/inputs/macros.sty
@@ -144,6 +144,8 @@
 \newcommand{\power}[1]{\ensuremath{\mathscr{P}(#1)}}
 %% \newcommand{\sP}{\ensuremath{\power{P}}}
 \newcommand{\sP}{\ensuremath{\mathcal{P}}}
+\newcommand{\alphar}{\ensuremath{\mathrel{\alpha}}}
+\newcommand{\betar}{\ensuremath{\mathrel{\beta}}}
 \newcommand{\balpha}{\ensuremath{\boldsymbol{\alpha}}}
 \newcommand{\bbeta}{\ensuremath{\boldsymbol{\beta}}}
 \newcommand{\bgamma}{\ensuremath{\boldsymbol{\gamma}}}
