--- a/notes/com-fix-poi.tex
+++ b/notes/com-fix-poi.tex
@@ -237,16 +237,19 @@ takes each $B \subseteq \beta$ to
     $(b,b')\in [\alpha, \beta]$ iff $(c,c')\in [\alpha, \beta]$, as desired.
 
     We have thus proved that $[\alpha, \beta]$ is a fixed point of $\Phiba$.
-    Recall that the lattice order on $\Con \bA$ is complete, so the least fixed
-    point of a monotone increasing function $f$ defined on $\Con \bA$ is 
-    $p = \Meet \{ c \mid f c \leq c\}$. %(See, for example,~\cite{MR3012378}.)
+    %% Recall that the lattice order on $\Con \bA$ is complete, so t
+    The least fixed point of a monotone increasing function $f$ defined on a
+    (complete) lattice is $\Meet \{ c \mid f c \leq c\}$. %(See, for example,~\cite{MR3012378}.)
     Thus, we complete the proof by checking that
     \begin{equation}
       \label{eq:2}
     [\alpha, \beta] =\Meet \{ B \subseteq \beta \mid \Phiba(B) \subseteq B\}.
     \end{equation}
+
+    TODO: finish proof!
   \end{enumerate}
 
+  
   \vfill
   
 \end{proof}
