--- a/notes/inputs/macros.sty
+++ b/notes/inputs/macros.sty
@@ -148,6 +148,13 @@
 \newcommand{\betar}{\ensuremath{\mathrel{\beta}}}
 \newcommand{\balpha}{\ensuremath{\boldsymbol{\alpha}}}
 \newcommand{\bbeta}{\ensuremath{\boldsymbol{\beta}}}
+
+\usepackage{accents}
+\newcommand{\ubar}[1]{\ensuremath{\underaccent{\bar}{#1}}}
+%% \newcommand{\ubar}[1]{\ensuremath{\underline{#1}}}
+\newcommand{\overbar}[1]{\ensuremath{\bar{#1}}}
+\renewcommand{\bbeta}{\ensuremath{\ubar{\boldsymbol{\beta}}}}
+
 \newcommand{\bgamma}{\ensuremath{\boldsymbol{\gamma}}}
 \newcommand{\bdelta}{\ensuremath{\boldsymbol{\delta}}}
 \newcommand{\bepsilon}{\ensuremath{\boldsymbol{\epsilon}}}
