major progress/additions

--- a/notes/com-fix-poi.tex
+++ b/notes/com-fix-poi.tex
@@ -303,9 +303,9 @@ by~(\ref{item:1}).
     $a_i \betar a_i'$ ($1\leq i\leq k$). 
     By~(\ref{eq:0}), either
     \[
-    (b, b') = (\gA_0(x_0, \ba), \gA_0(x_0, \ba')
+    (b, b') = \bigl(\gA_0(x_0, \ba), \gA_0(x_0, \ba')\bigr)
     \quad \text{ and } \quad 
-    (z_1,z_1')= (\gA_0(y_0, \ba), \gA_0(y_0, \ba')),
+    (z_1,z_1')= \bigl(\gA_0(y_0, \ba), \gA_0(y_0, \ba')\bigr),
     \]
     or vice-versa.  Since $x_0 \alphar y_0$ and 
     $a_i \betar a_i'$ ($1\leq i\leq k$), the $\alpha,\beta$-term condition
