--- a/notes/inputs/macros.sty
+++ b/notes/inputs/macros.sty
@@ -148,6 +148,8 @@
 \newcommand{\betar}{\ensuremath{\mathrel{\beta}}}
 \newcommand{\balpha}{\ensuremath{\boldsymbol{\alpha}}}
 \newcommand{\bbeta}{\ensuremath{\boldsymbol{\beta}}}
+\newcommand{\bone}{\ensuremath{\boldsymbol{1}}}
+\newcommand{\boneF}{\ensuremath{\boldsymbol{1}_F}}
 
 \usepackage{accents}
 \newcommand{\ubar}[1]{\ensuremath{\underaccent{\bar}{#1}}}
