--- a/notes/prod-cong.tex
+++ b/notes/prod-cong.tex
@@ -121,7 +121,9 @@ MRREVIEWER = {James B. Nation},
 
 \usepackage{amsmath}
 \usepackage{amscd,amssymb,amsthm} %, amsmath are included by default
-\usepackage{latexsym,stmaryrd,mathrsfs,enumerate,scalefnt,ifthen}
+\usepackage{latexsym,mathrsfs,enumerate,scalefnt,ifthen}
+\usepackage{stmaryrd}
+\SetSymbolFont{stmry}{bold}{U}{stmry}{m}{n}
 \usepackage{mathtools}
 \usepackage[mathcal]{euscript}
 \usepackage[colorlinks=true,urlcolor=black,linkcolor=black,citecolor=black]{hyperref}
@@ -212,16 +214,17 @@ MRREVIEWER = {James B. Nation},
 
 %% \thanks{The authors would like to extend special thanks to...}
 
-\maketitle
-
-\renewcommand{\etaR}{\ensuremath{\eta}}
-
 \begin{abstract}
 This note provides some tools that should enable us to prove
 the following: if $\bA$ is a finite idempotent algebra with a
 difference term operation, then the 2-generated free algebra in $\bbV(\bA)$ has
 a difference term operation.  
 \end{abstract}
+
+\maketitle
+
+\renewcommand{\etaR}{\ensuremath{\eta}}
+
 
 \section{Definitions and Preliminary Facts}
 \label{sec:facts}
@@ -318,11 +321,11 @@ $\bigl(\{x\} \times F\bigr) \cup \bigl(F \times \{y\}\bigr) \subseteq R$.
   \begin{enumerate}
   \item  In fact, $\Cg^{\bB}(a,b)=1_B$ holds for every
     2-generated idempotent algebra, $\bB = \Sg^{\bB}(a,b)$, with generators
-    $a$ and $b$.  If $(c,d) \in B^2$, then there are terms $s$ and $t$
-    such that $s(a,b) = c$ and $t(a,b) = d$.  Therefore, 
+    $a$ and $b$.  If $(c,c') \in B^2$, then there are terms $s$ and $t$
+    such that $s(a,b) = c$ and $t(a,b) = c'$.  Therefore, 
     $(c,b) = (s(a,b), s(b,b))$ belongs to $\Cg^{\bB}(a,b)$; likewise
-    $(a,d) = (t(a,a), t(a,b))$ belongs to $\Cg^{\bB}(a,b)$, so
-    $c \mathrel{\Cg^{\bF}(x,y)} b\mathrel{\Cg^{\bF}(x,y)} a \mathrel{\Cg^{\bF}(x,y)} d$,
+    $(a,c') = (t(a,a), t(a,b))$ belongs to $\Cg^{\bB}(a,b)$, so
+    $c \mathrel{\Cg^{\bF}(x,y)} b\mathrel{\Cg^{\bF}(x,y)} a \mathrel{\Cg^{\bF}(x,y)} c'$,
     as desired.
     %% NEW PROOF: (finish this later if necessary)\\
     %% Consider the homomorphism from $\bF:= \bF_{\sV}(x,y)$ onto the 1-generated free
@@ -489,8 +492,8 @@ $\Phi_{\beta, \alpha}$.)
   Let $\bA$ be an algebra with $\alpha$, $\beta\in \Con(\bA)$.
   If $\Phi:=\Phi_{\beta, \alpha}$ is defined as in~(\ref{eq:6}), then 
   \begin{enumerate}[(i)]
-  \item \label{item:1} $\Phiba$ is a closure operator on $\sP(\beta)$;
-  \item \label{item:2} $[\alpha, \beta]$ is the least fixed point of $\Phiba$.
+  \item \label{item:111} $\Phiba$ is a closure operator on $\sP(\beta)$;
+  \item \label{item:222} $[\alpha, \beta]$ is the least fixed point of $\Phiba$.
   \end{enumerate}
 \end{lemma}
 \noindent (A proof of Lemma~\ref{lem:fixed-point-comm} appears in Appendix
@@ -498,8 +501,7 @@ Section~\ref{sec:fixed-point-lemma} below.)
 
 
 \section{Main Result}
-Our goal is to prove Theorem~\ref{thm:main-result} below.\footnote{(I believe we
-  are nearly there.)} Our proof will use the following lemma.
+Our goal is to prove Theorem~\ref{thm:main-result} below. Our proof will use the following lemma.
 %% $\bF = \<F, \dots\> = \bF_{\sV}(x,y)$ is finite. 
 \begin{lemma}
   If $d$ is a difference term operation for $\bA$,
@@ -694,7 +696,7 @@ ${y} \times \bigl(x/[1_{\Fone}, 1_{\Fone}]\bigr) \in R$.\\
 \subsection{A special case}
 Let $\bA$ be a finite idempotent algebra, let $\sV = \bbV(\bA)$, and let
 \[\bF:= \bF_{\sV}(\bx,\by) \sdp \bA_0 \times \bA_1 \times \cdots \times \bA_{n-1},\]
-where each $\bA_i$ is a 2-generated subalgebra of $\bA$.
+where $n \leq |A|^2$ and each $\bA_i$ is a 2-generated subalgebra of $\bA$.
 Let $\bR := \Sg^{\bF^2} \{(\bx, \bx), (\bx, \by), (\by, \by)\}$,
 and recall that $\bR$ is a subdirect product of $\bF \times \bF$.
 
@@ -722,12 +724,8 @@ our goal is to prove that $d^{\bF}$ also satisfies the weak difference term rela
   \label{eq:3}  
   d^{\bF}(\bx, \by, \by) \comr{1_F} \bx.
 \end{equation}
-This is equivalent to
-\begin{equation*}
-  d^{\bA_0\times \bA_1 \times \bA_2}\bigl((a_0, a_1, a_2), (b_0, b_1, b_2), (b_0, b_1, b_2)\bigr)
-  \comr{1_{F}} (a_0, a_1, a_2).
-\end{equation*}
-Equivalently, to prove (\ref{eq:3}) we must show
+This is equivalent to $d^{\bA_0\times \bA_1 \times \bA_2}\bigl((a_0, a_1, a_2), (b_0, b_1, b_2), (b_0, b_1, b_2)\bigr) \comr{1_{F}} (a_0, a_1, a_2)$.
+Equivalently, %to prove (\ref{eq:3}) we must show
 \begin{equation*}
 \bigl(d^{\bA_0}(a_0, b_0, b_0), d^{\bA_1}(a_1, b_1, b_1), d^{\bA_2}(a_2, b_2, b_2)\bigr)
  \comr{1_F} (a_0, a_1, a_2).
@@ -789,7 +787,7 @@ For example, suppose for all $a$, $b$, $b'\in F$ that
 $(a,a)\mathrel{\Delta} (b,b')$ iff $b = b'$.
 Then $D$ is a class of $\Delta$ and $\bF$ is abelian.
 In that case, $\bF$ is absorption free
-(see~\ref{lem:abelian-AF}) and the Absorption Theorem implies
+(see Lemma~\ref{lem:abelian-AF}) and the Absorption Theorem implies
 $\bR  = \bF \times \bF$.
 Our earlier goal~(\ref{eq:0000001}) is
 trivially satisfied in this case. Therefore, we proceed under the assumption that $\bF$ is
@@ -807,7 +805,6 @@ $\bigl(d^{\bF}(\bx, \by, \by), \bx \bigr) \in  \Phi \com{1_F}$.
 This will complete the proof of (\ref{eq:3}), since
 $\Phi \com{1_F} \subseteq \com{1_F}$ by
 Lemma~\ref{lem:fixed-point-comm}.
-
 By (\ref{eq:666}), 
 $(d^{\bF}(\bx, \by, \by), \bx ) \in  \Phi \com{1_F}$ iff
 $(d^{\bF}(\bx, \by, \by), \bx ) \mathrel{\Delta} (b, b')$
@@ -817,7 +814,8 @@ for some $(b, b') \in \com{1_F}$.
 \renewcommand\by{\ensuremath{\mathbf{y}}}
 %-------------------------------------------------
 
-to be continued...
+\medskip
+To be continued...
 
 \bigskip
 
@@ -857,11 +855,11 @@ Indeed,~(\ref{item:15}) says
 $d^{\bA_0\times \bA_1 \times \bA_2}$ is a difference term operation for 
 $\bA_0\times \bA_1 \times \bA_2$, so
 \begin{equation}
-    \label{eq:5}
+    \label{eq:555}
   d^{\bA_0\times \bA_1 \times \bA_2}\bigl((a_0, a_1, a_2), (b_0, b_1, b_2), (b_0, b_1, b_2)\bigr)
   \comr{1_{A_0\times A_1\times A_2}} (a_0, a_1, a_2).
 \end{equation}
-Observe that~(\ref{eq:3}) is still stronger than~(\ref{eq:5})
+Observe that~(\ref{eq:3}) is still stronger than~(\ref{eq:555})
 because $\bF$ is a subalgebra of $\bA_0\times \bA_1 \times \bA_2$, so 
 $F \times F = 1_F$ is a subuniverse of
 $(\bA_0 \times \bA_1 \times \bA_2)^2$.  The latter has universe
@@ -909,10 +907,27 @@ $\com{1_F} \subseteq \com{1_{A_0\times A_1\times A_2}}$ holds.
 %% \}.
 %% \]
 
-\newpage
+\bigskip
 
 \section{More potentially useful observations}
-\subsection{Observation 1}
+A very useful result of Kearnes and Kiss that holds in varieties that satisfy a
+nontrivial idempotent \malcev condition is the following:
+\begin{theorem}[\protect{\cite[Thm~3.27]{MR3076179}}] 
+  \label{thm:kearnes-kiss-3.27}
+  Suppose $\alpha$ and $\beta$ are congruences of a Taylor algebra. Then
+  $\CC{\alpha}{ \alpha}{ \alpha \meet \beta}$ if and only if
+  $\CC{\alpha \join \beta}{ \alpha \join \beta}{ \beta}$.
+\end{theorem}
+
+\subsection*{Observation 1}
+That $\bR/\rho_1 \cong \bFone /[1_{\Fone},1_{\Fone}]$ is abelian means
+$\CC{1_{R/\rho_1}}{1_{R/\rho_1}}{0_{R/\rho_1}}$ holds, and this is equivalent to
+$\CC{1_R}{1_R}{\rho_1}$. By Theorem~\ref{thm:kearnes-kiss-3.27} below, the latter
+holds if and only if $\CC{\etaR_0}{\etaR_0}{\etaR_0\meet \rho_1}$.
+It follows that $[\etaR_0, \etaR_0]\leq \etaR_0 \meet \rho_1$.
+
+
+\subsection*{Observation 2}
 \renewcommand{\phi}{\ensuremath{\varphi}}
 For each $i\in \{0,1,2\}$, let $\etaR_i = \ker(\bF \onto \bA_i)$ be the kernel of
 the projection of $\bF$ onto the $i$-th coordinate.  Then
@@ -927,22 +942,9 @@ such that
 
 \bigskip
 
-\subsection{Observation 2}
-
-That $\bR/\rho_1 \cong \bFone /[1_{\Fone},1_{\Fone}]$ is abelian means
-$\CC{1_{R/\rho_1}}{1_{R/\rho_1}}{0_{R/\rho_1}}$ holds, and this is equivalent to
-$\CC{1_R}{1_R}{\rho_1}$. By a result of Kearnes and Kiss
-(Thm.~\ref{thm:kearnes-kiss-3.27} below), the latter
-holds if and only if $\CC{\etaR_0}{\etaR_0}{\etaR_0\meet \rho_1}$.
-It follows that $[\etaR_0, \etaR_0]\leq \etaR_0 \meet \rho_1$.
 
 \vfill
 
-
-
-
-\bibliographystyle{alphaurl}
-\bibliography{inputs/refs2.bib}
 
 % \newpage
 \appendix
@@ -1052,12 +1054,57 @@ argument inductively, we find that $z_i = z_i'$ for all $1\leq i < n$ and so, by
 \end{proof}
 
 
+\begin{lemma}
+  \label{lem:bijection_abelian}
+  Suppose $\rho \colon A_0 \to A_1$ is a bijection and suppose the graph
+  $\{(x, \rho x) \mid x \in A_0\}$ is a block of some congruence
+  $\beta \in \Con (A_0 \times A_1)$.  Then both $\bA_0$ and $\bA_1$ are abelian.
+\end{lemma}
+\begin{proof}
+  Define the relation $\alpha\subseteq (A_1\times A_1)^2$ as follows: for
+  $((a,a'), (b,b')) \in (A_1\times A_1)^2$,
+  \[
+  (a,a')\mathrel{\alpha} (b,b')
+  \quad \iff \quad
+  (a, \rho a') \mathrel{\beta} (b, \rho b')
+  \]
+  We prove that the diagonal $D(A_1)$ is a block of $\alpha$ by showing that
+  $(a, a) \mathrel{\alpha} (b,b')$ implies $b = b'$.
+  Indeed, if $(a, a) \mathrel{\alpha} (b,b')$, then
+  $(a, \rho a) \mathrel{\beta} (b, \rho b')$, which means that
+  $(b, \rho b')$ belongs to the block and
+  $(a, \rho a)/\beta = \{(x, \rho x)\mid x\in A_1\}$.  Therefore,
+  $\rho b  = \rho b'$, so $b = b'$ since $\rho$ is injective.
+  This proves that $\bA_1$ is abelian.
+
+  To prove $\bA_2$ is abelian, we reverse the roles of $A_1$ and $A_2$ in the
+  foregoing argument.  
+  If $\{(x, \rho x) \mid x \in A_1\}$ is a block of $\beta$,
+  then 
+  $\{(\rho^{-1}(\rho x), \rho x) \mid \rho x \in A_2\}$ is a block of $\beta$; that
+  is, $\{(\rho^{-1} y, y) \mid y \in A_2\}$ is a block of $\beta$.  Define 
+  the relation $\alpha\subseteq (A_2\times A_2)^2$ as follows: for
+  $((a,a'), (b,b')) \in (A_2\times A_2)^2$,
+  \[
+  (a,a')\mathrel{\alpha} (b,b')
+  \quad \iff \quad
+  (\rho^{-1}a, \rho a') \mathrel{\beta} (\rho^{-1}b, \rho b').
+  \]
+  As above, we can prove that the diagonal $D(A_2)$ is a block of $\alpha$
+  by using the injectivity of $\rho^{-1}$ to show that $(a, a) \mathrel{\alpha}
+  (b,b')$
+  implies $b = b'$.
+\end{proof}
+
+\bigskip
+
 \subsection{Abelian algebras are absorption free}
 \label{sec:proof-that-abelian}
 An very useful property of abelian algebras is that they are absorption-free.
 A proof of this appears in~\cite[Lem~4.1]{MR3374664}, but we include 
 a proof here for easy reference and to keep the paper somewhat self-contained.
-First we require an elementary fact about functions on finite sets.\\[4pt]
+First we require an elementary fact about functions on finite sets.
+
 %% \noindent {\bf Fact A.1.}
 \begin{fact}
 \label{fact:idemp-funct-fin-set}
@@ -1135,6 +1182,7 @@ Finite idempotent abelian algebras are absorption-free.
   $s(\bb, a) = t_m(\bb, a,a) \in B$, as desired.
 \end{proof}
 
+\bigskip
 
 \subsection{Fixed Point Lemma}
 \label{sec:fixed-point-lemma}
@@ -1142,8 +1190,8 @@ Finite idempotent abelian algebras are absorption-free.
   Let $\bA$ be an algebra with $\alpha$, $\beta\in \Con(\bA)$.
   If $\Phi:=\Phi_{\beta, \alpha}$ is defined as in~(\ref{eq:6}), then 
   \begin{enumerate}[(i)]
-  \item \label{item:1} $\Phiba$ is a closure operator on $\sP(\beta)$;
-  \item \label{item:2} $[\alpha, \beta]$ is the least fixed point of $\Phiba$.
+  \item \label{item:001} $\Phiba$ is a closure operator on $\sP(\beta)$;
+  \item \label{item:002} $[\alpha, \beta]$ is the least fixed point of $\Phiba$.
   \end{enumerate}
 \end{lem}
 \begin{proof}\
@@ -1251,11 +1299,10 @@ by~(\ref{item:1}).
     complete poset $\<P, \leq\>$, then the least fixed point of $f$
     is $\Meet \{ p\in P \mid f p \leq p\}$. %(See, for example,~\cite{MR3012378}.)
     Thus,
-    Lemma~\ref{lem:fixed-point-comm}~(\ref{item:2}) asserts that
-    \begin{equation}
-      \label{eq:2}
+    Lemma~\ref{lem:fixed-point-comm}~(\ref{item:002}) asserts that
+    \[
             [\alpha, \beta] =\Meet \{ B \subseteq \beta \mid \Phiba(B) \subseteq B\}.
-    \end{equation}
+    \]
 
     We already proved $[\alpha, \beta]$ is
     $\Phiba$-closed, so it remains to check for every $\Phiba$-closed subset
@@ -1291,7 +1338,7 @@ by~(\ref{item:1}).
     \end{align*}
     Therefore,
     \begin{align}
-      \label{item:4}
+      \label{item:444}
     p^{\beta}((a,a), (c_1, c_1'), (c_1, c_1'), \dots, (c_{k}, c_{k}'))
     &= (p^{\bA}(a, \bc), p^{\bA}(a, \bc')) \in \beta  \quad \text{ and }\\
     \label{item:5}
@@ -1299,15 +1346,16 @@ by~(\ref{item:1}).
     &= (p^{\bA}(a', \bc), p^{\bA}(a', \bc')) \in \beta.
     \end{align}
     Finally, $a\alphar a'$ implies $p(a, \bc) \alphar p(a', \bc)$, and this---together
-    with~(\ref{item:4}) and~(\ref{item:5})---proves the pair
+    with~(\ref{item:444}) and~(\ref{item:5})---proves the pair
     $\bigl((p(a, \bc), p(a, \bc')), (p(a', \bc), p(a', \bc'))\bigr)$
     belongs to  $\mathrel{\Delta_{\beta, \alpha}}$.
     Since  $(p(a, \bc), p(a, \bc')) \in B$, this proves
     $(p(a', \bc), p(a', \bc')) \in \Phiba(B)$, completing the proof.
   \end{proof}
 
+\bigskip
 
-\subsection{Absorption Theorem of Barto and Kozik}
+\subsection{Absorption Theorem (Barto and Kozik)}
 % K and Theorem 3.2 of BKS}
 % First we recall the Absorption Theorem  of Barto and Kozik.
 \begin{theorem}[Absorption Theorem \protect{\cite[Thm~2.3]{MR2893395}}]
@@ -1326,63 +1374,53 @@ If $\etaR_A \join \etaR_B = 1_R$, then either $\bR = \bA \times \bB$, or
 $\bA$ has a proper absorbing subuniverse, or $\bB$ has a proper absorbing subuniverse.
 \end{theorem}
 
-\subsection{Projectivity Theorem for Taylor Varieties}
-  \begin{theorem}[\protect{\cite[Thm~3.27]{MR3076179}}] 
-    \label{thm:kearnes-kiss-3.27}
-    Suppose $\alpha$ and $\beta$ are congruences of a Taylor algebra. Then
-    $\CC{\alpha}{ \alpha}{ \alpha \meet \beta}$ if and only if
-    $\CC{\alpha \join \beta}{ \alpha \join \beta}{ \beta}$.
-  \end{theorem}
 
+\begin{theorem}[\protect{\cite[Theorem 3.2]{MR3374664}}]
+  Let $\sV$ be a locally finite variety generated by a set $\sA$ of
+  idempotent ``hereditarily absorption free'' algebras.
+  If $\sV$ has a Taylor term, then it has a Mal'tsev term.
+\end{theorem}
+\begin{proof}
+  Let $\bF = \bF_{\sV}(x,y)$ be the 2-generated free algebra
+  %% , with generators $x, y$, 
+  in the variety $\sV$. Since it is
+  finite, $\bF$ lies in the pseudovariety generated by $\sA$, and thus it is
+  absorption-free (see \cite[Proposition 2.1.(1)]{MR3374664}).
+  Let $\bR$ be the subalgebra of $\bF^2$ generated by
+  $(x, y), (x, x), (y, x)$. It is subdirect in $\bF^2$.
+  Since $\bF$ is idempotent, $\etaR_A \join \etaR_B = 1_R$
+  (as observed in Lemma~\ref{lem:preliminary-facts}~(\ref{item:5})).
+  Consequently, by Theorem~\ref{thm:absorption},
+  $\bR = \bF^2$, and there is a term $m$ witnessing
+  that $(y, y) \in R$, i.e., a term $m$ satisfying
+  $m((x, y), (x, x), (y, x)) = (y, y)$. This
+  term is a Mal'tsev term for $\sV$.
+\end{proof}
 
-% \begin{theorem}[\protect{\cite[Theorem 3.2]{MR3374664}}]
-%   Let $\sV$ be a locally finite variety generated by a set $\sA$ of
-%   idempotent ``hereditarily absorption free'' algebras.
-%   If $\sV$ has a Taylor term, then it has a Mal'tsev term.
-% \end{theorem}
-% \begin{proof}
-%   Let $\bF = \bF_{\sV}(x,y)$ be the 2-generated free algebra
-%   %% , with generators $x, y$, 
-%   in the variety $\sV$. Since it is
-%   finite, $\bF$ lies in the pseudovariety generated by $\sA$, and thus it is
-%   absorption-free (see \cite[Proposition 2.1.(1)]{MR3374664}).
-%   Let $\bR$ be the subalgebra of $\bF^2$ generated by
-%   $(x, y), (x, x), (y, x)$. It is subdirect in $\bF^2$.
-%   Since $\bF$ is idempotent, $\etaR_A \join \etaR_B = 1_R$
-%   (as observed in Lemma~\ref{lem:preliminary-facts}~(\ref{item:5})).
-%   Consequently, by Theorem~\ref{thm:absorption},
-%   $\bR = \bF^2$, and there is a term $m$ witnessing
-%   that $(y, y) \in R$, i.e., a term $m$ satisfying
-%   $m((x, y), (x, x), (y, x)) = (y, y)$. This
-%   term is a Mal'tsev term for $\sV$.
-% \end{proof}
+\begin{remark}
+  \label{rem:absorpt-theor-bk}
+  Let $\pi_0$ and $\pi_1$ be the first and second projections of $\bR$ onto $\bF$.
+  Since $\bF$ is idempotent, $\{x\}$ is a subalgebra of $\bF$, hence the inverse
+  image of $\{x\}$ under $\pi_0$ is a subuniverse of $\bR$, call it $S_0$.
+  Since $(x,y)$ and $(x,x)$ lie in $S_0$, and $\{x,y\}$
+  generates $\bF$, we see that $\{x\}\times F$ is contained in $S_0$.
+  In particular, for every $a_1$, the pair $(x,a_1)$ must lie in $R$.
+  Similarly, there is a subalgebra $S_1$ containing
+  $F\times \{x\}$. %% Note that the kernels of $\pi_A$ and $\pi_B$ are $\eta_A$ and $\eta_B$. 
+  Finally, for any $(a_0,a_1)$ and $(a_0',a_1')$ in $R$ we have
+  %% \[
+  %% (a_1,a_2) \mathrel{\eta_B} (x,a_2) \mathrel{\eta_A} (x,x) \mathrel{\eta_B} (b_1,x) \mathrel{\eta_A} (b_1,b_2).
+  %% \]
+  \[
+  (a_0,a_1) \mathrel{\eta_1} (x,a_1) \mathrel{\eta_0} (x,a_1') \mathrel{\eta_1} (a_0',a_1').
+  \]
+  %% Cliff: You and I talked about whether Theorem 3.2 required idempotence.
+  %%        Apparently it does. Is the idempotent reduct of an abelian algebra still abelian?
+\end{remark}
 
-% \begin{remark}
-%   \label{rem:absorpt-theor-bk}
-%   Let $\pi_0$ and $\pi_1$ be the first and second projections of $\bR$ onto $\bF$.
-%   Since $\bF$ is idempotent, $\{x\}$ is a subalgebra of $\bF$, hence the inverse
-%   image of $\{x\}$ under $\pi_0$ is a subuniverse of $\bR$, call it $S_0$.
-%   Since $(x,y)$ and $(x,x)$ lie in $S_0$, and $\{x,y\}$
-%   generates $\bF$, we see that $\{x\}\times F$ is contained in $S_0$.
-%   In particular, for every $a_1$, the pair $(x,a_1)$ must lie in $R$.
-%   Similarly, there is a subalgebra $S_1$ containing
-%   $F\times \{x\}$. %% Note that the kernels of $\pi_A$ and $\pi_B$ are $\eta_A$ and $\eta_B$. 
-%   Finally, for any $(a_0,a_1)$ and $(a_0',a_1')$ in $R$ we have
-%   %% \[
-%   %% (a_1,a_2) \mathrel{\eta_B} (x,a_2) \mathrel{\eta_A} (x,x) \mathrel{\eta_B} (b_1,x) \mathrel{\eta_A} (b_1,b_2).
-%   %% \]
-%   \[
-%   (a_0,a_1) \mathrel{\eta_1} (x,a_1) \mathrel{\eta_0} (x,a_1') \mathrel{\eta_1} (a_0',a_1').
-%   \]
-%   %% Cliff: You and I talked about whether Theorem 3.2 required idempotence.
-%   %%        Apparently it does. Is the idempotent reduct of an abelian algebra still abelian?
-% \end{remark}
+\bigskip
 
-\end{document}
-
-
-
-%% NEW STUFF
+\section{Odds and Ends}
 Before proving the next result, it will be helpful to review some standard
 notation that is useful when dealing with products of quotients.  
 Let $A$ and $B$ be sets and let $\alpha$ and $\beta$ be equivalence relations on
@@ -1414,23 +1452,8 @@ $A$ and $B$, respectively.
     item~(\ref{item:9}).
   \end{enumerate}
 \end{remarks}
-\newpage
 
-
-
-
-
-
-
-
-
-
-
-
-
-\appendix
-
-\section{Other ideas that, so far, haven't worked}
+\bigskip
 
 \subsection{Skew congruences of idempotent algebras}
 Let $\sV$ be a variety and let $\bA$ and $\bB$ be idempotent
@@ -1624,6 +1647,23 @@ $\Pol_1(\bA \times \bB)$ such that
 %   d(b,b,b'), b', d(b,b,b'),\dots, d(b,b,b'))\bigr)\\
 %   &= \bigl(f^{\bA} (a'), s^{\bB}(b', \dots, b')\bigr)= \bigl(f^{\bA} (a'), b'\bigr).
 % \end{align*}
+
+\bibliographystyle{alphaurl}
+\bibliography{inputs/refs2.bib}
+
+\end{document}
+
+
+
+%% NEW STUFF
+
+
+
+
+\appendix
+
+\section{Other ideas that, so far, haven't worked}
+
 
 
 
